--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -5,7 +5,7 @@
 
   <p>Welcome to <em>LocalLibrary</em>.</p>
 
-  <h2>Dynamic content</h2>
+  <h2>Statistics</h2>
 
   <p>The library has the following record counts:</p>
   <ul>
@@ -18,4 +18,8 @@
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
   </ul>
+
+  <p>
+    You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.
+  </p>
 {% endblock %}
