--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -27,11 +27,13 @@
               {% if user.is_authenticated %}
               <li>User: {{ user.get_username }}</li>
               <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+              {% if perms.catalog.can_mark_returned %}
+              <li><a href="{% url 'all-borrowed' %}">All Borrowed</a></li>
+              {% endif %}
               <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-            {% else %}
-              <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-            {% endif %}
-
+              {% else %}
+                <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+              {% endif %}
             </ul>
           {% endblock %}
         </div>
